# py2rust

./: Cargo.toml  films.sql  sample.html  settings.toml  test.db
ch01/: Cargo.toml
ch01/src/: main.rs
ch02/: Cargo.toml
ch02/src/: afda.text  main.rs
ch02_regex/: Cargo.toml
ch02_regex/src/: main.rs
ch03/: Cargo.toml
ch03/src/: main.rs
ch05/: Cargo.toml
ch05/src/: main.rs
ch07/: Cargo.toml
ch07/src/: main.rs
pw/: Cargo.toml
pw/src/: main.rs
