[package]
name = "ch02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
reqwest = "*"
log = "*"
pretty_env_logger = "*"
tokio = { version = "*", features = ["full"] }
env_logger = "*"
config = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
